src/objects/Integration_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings which store integration settings</description>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Settings</label>
</CustomObject>